# p4c

./: .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci-test.yml
backends/bmv2/: base_test.py  bmv2stf.py  run-bmv2-ptf-test.py  run-bmv2-test.py
backends/dpdk/: backend.h  dbprint-dpdk.cpp  dpdkArch.cpp  dpdkArch.h  dpdkAsmOpt.cpp  dpdkAsmOpt.h  dpdkContext.cpp  dpdkContext.h  dpdkHelpers.cpp  dpdkHelpers.h  dpdkMetadata.cpp  dpdkMetadata.h  dpdkProgram.cpp  dpdkProgram.h  dpdkProgramStructure.h  dpdkUtils.cpp  dpdkUtils.h  options.cpp  options.h  printUtils.cpp  run-dpdk-test.py  spec.cpp
backends/ebpf/: codeGen.cpp  codeGen.h  ebpfControl.cpp  ebpfDeparser.cpp  ebpfModel.h  ebpfParser.cpp  ebpfParser.h  ebpfProgram.cpp  ebpfTable.cpp  ebpfTable.h  ebpfType.cpp  lower.cpp  midend.cpp  run-ebpf-test.py
backends/graphs/: controls.cpp  controls.h  graph_visitor.cpp  graph_visitor.h  graphs.cpp  graphs.h  parsers.cpp  parsers.h
backends/p4tools/modules/fuzzer/: CMakeLists.txt  fuzzer.cpp  fuzzer.h  main.cpp  options.cpp  options.h  register.h.in
backends/p4tools/modules/fuzzer/core/: arch_spec.cpp  arch_spec.h  constants.h  externs.cpp  externs.h  program_info.cpp  program_info.h  target.cpp  target.h  visit_externs.cpp  visit_externs.h
backends/p4tools/modules/fuzzer/core/exploration_strategy/: exploration_strategy.cpp  exploration_strategy.h  inc_max_coverage_stack.cpp  inc_max_coverage_stack.h  incremental_stack.cpp  incremental_stack.h  linear_enumeration.cpp  linear_enumeration.h  random_access_stack.cpp  random_access_stack.h  rnd_access_max_coverage.cpp  rnd_access_max_coverage.h  selected_branches.cpp  selected_branches.h  selected_test.cpp  selected_test.h
backends/p4tools/modules/fuzzer/core/small_step/: abstract_stepper.cpp  abstract_stepper.h  cmd_stepper.cpp  cmd_stepper.h  expr_stepper.cpp  expr_stepper.h  extern_stepper.cpp  extern_visitor.cpp  small_step.cpp  small_step.h  table_stepper.cpp  table_stepper.h  table_visitor.cpp  table_visitor.h  visit_step_evaluator.cpp  visit_step_evaluator.h  visit_stepper.cpp  visit_stepper.h
backends/p4tools/modules/fuzzer/lib/: concolic.cpp  concolic.h  continuation.cpp  continuation.h  exceptions.h  execution_state.cpp  execution_state.h  final_state.cpp  final_state.h  final_visit_state.cpp  final_visit_state.h  gen_eq.cpp  gen_eq.h  logging.cpp  logging.h  namespace_context.cpp  namespace_context.h  test_backend.cpp  test_backend.h  test_spec.cpp  test_spec.h  tf.cpp  tf.h  visit_concolic.cpp  visit_concolic.h  visit_state.cpp  visit_state.h
backends/p4tools/modules/fuzzer/targets/bmv2/: CMakeLists.txt  bmv2.cpp  bmv2.h  cmd_stepper.cpp  cmd_stepper.h  concolic.cpp  concolic.h  constants.cpp  constants.h  expr_stepper.cpp  expr_stepper.h  p4_asserts_parser.cpp  p4_refers_to_parser.cpp  p4_refers_to_parser.h  program_info.cpp  program_info.h  register.h  table_stepper.cpp  table_stepper.h  table_visitor.cpp  table_visitor.h  target.cpp  target.h  test_backend.cpp  test_backend.h  test_spec.cpp  test_spec.h  visit_concolic.cpp  visit_concolic.h  visit_stepper.cpp  visit_stepper.h
backends/p4tools/modules/fuzzer/targets/bmv2/backend/protobuf/: protobuf.cpp  protobuf.h
backends/p4tools/modules/fuzzer/targets/bmv2/backend/ptf/: ptf.cpp  ptf.h
backends/p4tools/modules/fuzzer/targets/bmv2/backend/stf/: stf.cpp  stf.h
backends/p4tools/modules/fuzzer/targets/bmv2/contrib/bmv2_hash/: calculations.cpp  calculations.h
backends/p4tools/modules/fuzzer/targets/bmv2/proto/: p4fuzzer.proto  p4testgen.proto
backends/p4tools/modules/fuzzer/targets/ebpf/: CMakeLists.txt  cmd_stepper.cpp  cmd_stepper.h  concolic.cpp  concolic.h  constants.cpp  ebpf.cpp  expr_stepper.cpp  expr_stepper.h  program_info.cpp  program_info.h  register.h  table_stepper.cpp  table_stepper.h  target.cpp  target.h  test_backend.cpp  test_backend.h  test_spec.cpp
backends/p4tools/modules/fuzzer/targets/ebpf/backend/stf/: stf.cpp  stf.h
backends/p4tools/modules/fuzzer/test/: gtest_utils.cpp  gtest_utils.h
backends/p4tools/modules/fuzzer/test/lib/: format_int.cpp  format_int.h  taint.cpp  taint.h
backends/p4tools/modules/fuzzer/test/small-step/: binary.cpp  p4_asserts_parser_test.cpp  reachability.cpp  unary.cpp  util.cpp  util.h  value.cpp
backends/p4tools/modules/fuzzer/test/transformations/: saturation_arithm.cpp
backends/p4tools/modules/fuzzer/test/z3-solver/: accessor.h  asrt_model.cpp  expressions.cpp
control-plane/: addMissingIds.cpp  bfruntime.cpp  bfruntime.h  bytestrings.cpp  bytestrings.h  flattenHeader.cpp  p4RuntimeArchHandler.cpp  p4RuntimeArchHandler.h  p4RuntimeArchStandard.cpp  p4RuntimeArchStandard.h  p4RuntimeSerializer.cpp  p4RuntimeSymbolTable.cpp  p4RuntimeSymbolTable.h  typeSpecConverter.cpp
ir/: dbprint-expression.cpp  dbprint-stmt.cpp  dbprint-type.cpp  dbprint.cpp  expression.cpp  indexed_vector.h  ir.cpp  irutils.cpp  json_parser.h  node.cpp  node.h  type.cpp  v1.cpp  visitor.cpp  visitor.h  write_context.cpp
lib/: big_int_util.cpp  big_int_util.h  castable.h  error_message.cpp  gc.cpp  json.cpp  json.h  log.cpp  log.h  match.cpp  match.h  options.cpp  source_file.cpp  source_file.h  stringify.cpp
midend/: actionSynthesis.cpp  booleanKeys.cpp  complexComparison.cpp  convertEnums.cpp  convertEnums.h  convertErrors.cpp  copyStructures.cpp  copyStructures.h  eliminateInvalidHeaders.cpp  eliminateInvalidHeaders.h  eliminateNewtype.cpp  eliminateSwitch.cpp  eliminateTuples.cpp  expandEmit.cpp  expandLookahead.cpp  expandLookahead.h  fillEnumMap.cpp  fillEnumMap.h  flattenHeaders.cpp  flattenHeaders.h  flattenInterfaceStructs.cpp  flattenInterfaceStructs.h  flattenLogMsg.cpp  flattenLogMsg.h  flattenUnions.cpp  flattenUnions.h  hsIndexSimplify.cpp  interpreter.cpp  local_copyprop.cpp  nestedStructs.h  noMatch.cpp  parserUnroll.cpp  parserUnroll.h  predication.cpp  predication.h  removeAssertAssume.cpp  removeComplexExpressions.cpp  removeComplexExpressions.h  removeExits.cpp  removeMiss.cpp  (+7 more)
tools/: ci-build.sh  cpplint.py  install_mac_deps.sh  testutils.py
(+413 files in other folders)
